--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,7 +29,7 @@
     </ion-col>
   </ion-row>
 
-  <button ion-button color="primary" block icon-left (click)="navCtrl.push('LoginPage')">
+  <button ion-button color="primary" block icon-left (click)="navCtrl.push('AddbabyPage')">
     <ion-icon name="log-in"></ion-icon>
     Iniciar sesión
   </button>
