--- a/src/pages/principal/principal.html
+++ b/src/pages/principal/principal.html
@@ -1,18 +1,43 @@
-<!--
-  Generated template for the PrincipalPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>principal</ion-title>
-  </ion-navbar>
-
+  <ion-navbar>    <ion-title>principal</ion-title>  </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
+  <ion-card>
+  <ion-card-header>
+   Seleccione
+  </ion-card-header>
 
+  <ion-list  >
+    <button ion-item >
+      <ion-icon ios="ios-happy" md="md-happy" item-start (click)="navCtrl.push('MonitoreoPage')"></ion-icon>
+      Juan
+
+    </button>
+
+    <button ion-item>
+      <ion-icon name="logo-reddit" item-start></ion-icon>
+      Juanito
+      <ion-icon  ios="ios-arrow-forward" md="md-arrow-forward" item-right></ion-icon>
+    </button>
+
+    <button ion-item>
+      <ion-icon name="logo-snapchat" item-start></ion-icon>
+      Juanita
+      <ion-icon  ios="ios-arrow-forward" md="md-arrow-forward" item-right></ion-icon>
+    </button>
+  </ion-list>
+
+  </ion-card>
+  <ion-card (tap)="tapEvent($event)">
+  <ion-item>
+   Cerrar sesion
+  </ion-item>
+</ion-card>
+    <button ion-button color="primary" block icon-left (click)="navCtrl.push('MonitoreoPage')">
+      <ion-icon name="log-in"></ion-icon>
+      monitoreo
+    </button>
 </ion-content>
