--- a/src/pages/tablaparametros/tablaparametros.html
+++ b/src/pages/tablaparametros/tablaparametros.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the TablaparametrosPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,37 @@
 
 
 <ion-content padding>
-
+  <p padding color="primary">
+      Frecuencia Cardiaca normales
+    </p>
+    <ion-grid>
+      <ion-row>
+        <ion-col>   <div>EDAD</div>   </ion-col>
+        <ion-col>   <div>FRECUENCIA (lmp)</div>   </ion-col>
+        <ion-col >   <div>MEDIA</div> </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><div>0 - 7 Días</div></ion-col>
+        <ion-col><div>96 - 160</div></ion-col>
+        <ion-col><div>125</div></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><div>1 - 3 Semanas</div></ion-col>
+        <ion-col><div>105 - 180</div></ion-col>
+        <ion-col><div>145</div></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><div>1 - 6 Meses</div></ion-col>
+        <ion-col><div>110 - 150</div></ion-col>
+        <ion-col><div>125</div></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col><div>6 - 12 Meses</div></ion-col>
+        <ion-col><div>90 - 130</div></ion-col>
+        <ion-col><div>110</div></ion-col>
+      </ion-row>
+    </ion-grid>
+    <p padding color="primary">
+        Temperatura ambiental
+      </p>
 </ion-content>
