--- a/src/pages/registerbaby/registerbaby.html
+++ b/src/pages/registerbaby/registerbaby.html
@@ -14,6 +14,11 @@
 
 
 <ion-content padding>
+
+<!-- uno -->
+<!-- <h4 ion-text text-center padding>{{lugar}}</h4> -->
+<!--  -->
+
   <h4 ion-text text-center padding>BIENVENIDO</h4>
   <h5 ion-text text-center padding>Gracias por adquirir MIB, ingresa los datos del bebé</h5>
   <ion-item>
