--- a/src/pages/monitoreo/monitoreo.html
+++ b/src/pages/monitoreo/monitoreo.html
@@ -1,8 +1,14 @@
 
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Monitereo de Juan</ion-title>
+ 
+    <ion-navbar color="primary">
+      <ion-title>Monitor</ion-title>
+      <ion-buttons>
+          <button ion-button
+                  menuToggle>
+            <ion-icon name="menu"></ion-icon>
+          </button>
+      </ion-buttons>
   </ion-navbar>
 
 </ion-header>
