--- a/src/pages/problemassalud/problemassalud.html
+++ b/src/pages/problemassalud/problemassalud.html
@@ -6,8 +6,14 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>problemassalud</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Problemas de Salud</ion-title>
+    <ion-buttons>
+        <button ion-button
+                menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
