--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,6 +2,12 @@
 
   <ion-navbar color="primary">
     <ion-title>Iniciar Sesión</ion-title>
+    <ion-buttons>
+        <button ion-button 
+               menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
