--- a/src/pages/number-add/number-add.html
+++ b/src/pages/number-add/number-add.html
@@ -1,8 +1,7 @@
 <ion-header>
-
-  <!-- <ion-navbar>
-    <ion-title>NumberAdd</ion-title>
-  </ion-navbar> -->
+  <ion-navbar color="primary">
+    <ion-title>MIB - agregarndo</ion-title>
+  </ion-navbar>
 
 </ion-header>
 
@@ -12,16 +11,16 @@
   <h3 ion-text text-center padding style="margin-top: 40px">¡Cuenta creada con éxito!</h3>
 
   <h6 ion-text text-center padding>
-    Para empezar a monitorear el estado del bebé, es necesario enlazar 
-    el dispositivo monitor con la aplicación. Si usted no cuenta con uno, 
+    Para empezar a monitorear el estado del bebé, es necesario enlazar
+    el dispositivo monitor con la aplicación. Si usted no cuenta con uno,
     haga <a href="#">click aquí</a>.
-    
-    <br><br>Recuerde que <strong>cada bebé debe 
-      tener su propio dispositivo de monitoreo.</strong> 
+
+    <br><br>Recuerde que <strong>cada bebé debe
+      tener su propio dispositivo de monitoreo.</strong>
   </h6>
 
   <h5 ion-text text-center padding>
-    ¿Cuántos bebés desea supervisar? (Puede añadir o eliminar 
+    ¿Cuántos bebés desea supervisar? (Puede añadir o eliminar
     dispositivos más adelante)
   </h5>
 
