--- a/src/pages/registerbaby/registerbaby.html
+++ b/src/pages/registerbaby/registerbaby.html
@@ -1,13 +1,13 @@
-<!--
-  Generated template for the RegisterbabyPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>registerbaby</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Registra bebé</ion-title>
+    <ion-buttons>
+        <button ion-button
+                menuToggle>
+          <ion-icon name="menu"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -15,12 +15,32 @@
 
 <ion-content padding>
 
-<!-- uno -->
-<!-- <h4 ion-text text-center padding>{{lugar}}</h4> -->
-<!--  -->
-
   <h4 ion-text text-center padding>BIENVENIDO</h4>
   <h5 ion-text text-center padding>Gracias por adquirir MIB, ingresa los datos del bebé</h5>
+  <ion-list>
+  <ion-item>
+    <ion-label floating>Nombre</ion-label>
+    <ion-input type="text" [(ngModel)]='lu'></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating>Direccion</ion-label>
+    <ion-input type="text" [(ngModel)]="lug"></ion-input>
+  </ion-item>
+  <ion-list>
+        <ion-item>
+          <ion-label>Categoria</ion-label>
+          <ion-select [(ngModel)]="luga">
+            <ion-option value="AireLibre">Aire libre</ion-option>
+            <ion-option value="LugarCerradp">Lugar Cerrado</ion-option>
+
+          </ion-select>
+        </ion-item>
+  </ion-list>
+
+  </ion-list>
+
+  <!-- <ion-list>
   <ion-item>
     <ion-label floating>ID del monitor</ion-label>
     <ion-input  ></ion-input>
@@ -30,10 +50,12 @@
     <ion-label floating>Nombre</ion-label>
     <ion-input type="text"></ion-input>
   </ion-item>
+
   <ion-item>
-    <ion-label floating>Fecha de nacimiento</ion-label>
-    <ion-input type="date"></ion-input>
+    <ion-label floating> .....................Fecha de nacimiento</ion-label>
+    <ion-input type="date" ></ion-input>
   </ion-item>
+
   <ion-row>
     <ion-col width-50>
       <ion-item>
@@ -45,8 +67,8 @@
       </ion-item>
     </ion-col>
   </ion-row>
-  <ion-list>
-    <ion-list-header>  Datos escenciales  </ion-list-header>
+
+  <h5 ion-text text-center padding>  Datos escenciales </h5>
   <ion-item>
     <ion-label >Es prematuro</ion-label>
     <ion-checkbox [(ngModel)]="prematuro"></ion-checkbox>
@@ -60,21 +82,21 @@
     <ion-checkbox [(ngModel)]="prematuro"></ion-checkbox>
   </ion-item>
   </ion-list>
-
+-->
   <button ion-button color="primary" block icon-left (click)="navCtrl.push('PrincipalPage')" >
     <ion-icon name="person-add"></ion-icon>
     Guardar
   </button>
   <!-- botonoes -->
-  <button ion-button color="primary" block icon-left (click)="navCtrl.push('PrincipalPage')">
-    <ion-icon name="log-in"></ion-icon>
-    prncippal
+
+
+  <button ion-button color="primary" block icon-left (click)="irRoot()">
+    root inicio
   </button>
-  <h1> hol a </h1>
-  <button ion-button color="primary" block icon-left (click)="navCtrl.push('MonitoreoPage')">
-    <ion-icon name="log-in"></ion-icon>
-    monitoreo
+  <button ion-button color="primary" block icon-left (click)="irAtras()">
+   atras
   </button>
+
   <button ion-button color="primary" block icon-left (click)="navCtrl.push('TablaparametrosPage')">
     <ion-icon name="log-in"></ion-icon>
     tablaparametros
