--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,9 +1,15 @@
 <ion-header>
 
-  <!-- <ion-navbar color="primary">
-    <ion-title>Bienvenido a MIB</ion-title>
-  </ion-navbar> -->
+    <ion-navbar color="primary">
+      <ion-title>MIB</ion-title>
+      <ion-buttons>
+          <button ion-button
+                  menuToggle>
+            <ion-icon name="menu"></ion-icon>
+          </button>
+      </ion-buttons>
 
+    </ion-navbar>
 </ion-header>
 
 
@@ -29,5 +35,5 @@
     Registrarse
   </button>
 
-  
+
 </ion-content>
