--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>REgistro</ion-title> 
+    <ion-title>REgistro</ion-title>
     </ion-navbar>
 
   </ion-header>
@@ -59,7 +59,7 @@
       <ion-checkbox [(ngModel)]="normasAceptadas"></ion-checkbox>
     </ion-item>
 
-    <button ion-button color="primary" block icon-left (click)="navCtrl.setRoot('NumberAddPage')">
+    <button ion-button color="primary" block icon-left (click)="navCtrl.setRoot('AddbabyPage')">
       <ion-icon name="person-add"></ion-icon>
       Registrarse
     </button>
