--- a/src/pages/principal/principal.html
+++ b/src/pages/principal/principal.html
@@ -12,14 +12,20 @@
 
 
 <ion-content padding>
+  <h5 ion-text text-center padding >
+    Seleccione monitor para desplegar el estado actual de sus signos vitales
+  </h5>
+  <h5 ion-text text-center padding >
+    Puede agregar otro monitor en el boton +
+  </h5>
   <ion-card>
   <ion-card-header>
-   Seleccione
+   Seleccione bebé
   </ion-card-header>
 
-  <ion-list  >
-    <button ion-item >
-      <ion-icon ios="ios-happy" md="md-happy" item-start (click)="navCtrl.push('MonitoreoPage')"></ion-icon>
+
+    <button ion-item   (click)="navCtrl.push('MonitoreoPage')" >
+      <ion-icon ios="ios-happy" md="md-happy" item-start ></ion-icon>
       Juan
 
     </button>
@@ -35,37 +41,32 @@
       Juanita
       <ion-icon  ios="ios-arrow-forward" md="md-arrow-forward" item-right></ion-icon>
     </button>
-  </ion-list>
+
 
   </ion-card>
-  <ion-card  >
-  <ion-item>
-   Cerrar sesion
-  </ion-item>
 
-</ion-card>
     <button ion-button color="primary" block icon-left (click)="navCtrl.push('MonitoreoPage')">
       <ion-icon name="log-in"></ion-icon>
       monitoreo
     </button>
-    <!-- list -->
-            <ion-list>
-          <ion-item-sliding #item>
-            <ion-item *ngFor="let lugar of lugares" (click)="irMonitoreo()">
-              <h2>{{lugar.nombre}} </h2>
-              <h3>{{lugar.direccion}}</h3>
-              <p> {{lugar.categoria}}</p>
-            </ion-item>
-            <ion-item-options side="left">
-              <button ion-button (click)="favorite(item)">Favorite</button>
-              <button ion-button color="danger" (click)="share(item)">Share</button>
-            </ion-item-options>
+    <button ion-button
+            outline
+            full
+            color="primary"
+            (click)="navCtrl.push('TablaparametrosPage')">
+            <ion-icon name="archive"></ion-icon>
+            Tabla de Parametros
+    </button>
+    <button ion-button
+            outline
+            full
+            color="primary"
+            (click)="navCtrl.push('ProblemassaludPage')">
+            <ion-icon name="medkit"></ion-icon>
+            Problemas de Salud
+    </button>
 
-            <ion-item-options side="right">
-              <button ion-button (click)="unread(item)">Unread</button>
-            </ion-item-options>
-          </ion-item-sliding>
-        </ion-list>
+
 
  <!-- this fab is placed at bottom right -->
        <ion-fab bottom right >
