--- a/src/pages/registerbaby/registerbaby.html
+++ b/src/pages/registerbaby/registerbaby.html
@@ -17,30 +17,7 @@
 
   <h4 ion-text text-center padding>BIENVENIDO</h4>
   <h5 ion-text text-center padding>Gracias por adquirir MIB, ingresa los datos del bebé</h5>
-  <ion-list>
-  <ion-item>
-    <ion-label floating>Nombre</ion-label>
-    <ion-input type="text" [(ngModel)]='lu'></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label floating>Direccion</ion-label>
-    <ion-input type="text" [(ngModel)]="lug"></ion-input>
-  </ion-item>
-  <ion-list>
-        <ion-item>
-          <ion-label>Categoria</ion-label>
-          <ion-select [(ngModel)]="luga">
-            <ion-option value="AireLibre">Aire libre</ion-option>
-            <ion-option value="LugarCerradp">Lugar Cerrado</ion-option>
-
-          </ion-select>
-        </ion-item>
-  </ion-list>
-
-  </ion-list>
-
-  <!-- <ion-list>
+ <ion-list>
   <ion-item>
     <ion-label floating>ID del monitor</ion-label>
     <ion-input  ></ion-input>
@@ -52,7 +29,8 @@
   </ion-item>
 
   <ion-item>
-    <ion-label floating> .....................Fecha de nacimiento</ion-label>
+
+    <ion-label stacked>Fecha de nacimiento</ion-label>
     <ion-input type="date" ></ion-input>
   </ion-item>
 
@@ -71,38 +49,22 @@
   <h5 ion-text text-center padding>  Datos escenciales </h5>
   <ion-item>
     <ion-label >Es prematuro</ion-label>
-    <ion-checkbox [(ngModel)]="prematuro"></ion-checkbox>
+    <ion-checkbox [(ngModel)]="prem"></ion-checkbox>
   </ion-item>
   <ion-item>
     <ion-label >Hubo complicaciones al nacer</ion-label>
-    <ion-checkbox [(ngModel)]="prematuro"></ion-checkbox>
+    <ion-checkbox [(ngModel)]="comp"  ></ion-checkbox>
   </ion-item>
   <ion-item>
     <ion-label >Nació por cesarea</ion-label>
-    <ion-checkbox [(ngModel)]="prematuro"></ion-checkbox>
+    <ion-checkbox [(ngModel)]="cesar"></ion-checkbox>
   </ion-item>
   </ion-list>
--->
+
   <button ion-button color="primary" block icon-left (click)="navCtrl.push('PrincipalPage')" >
     <ion-icon name="person-add"></ion-icon>
     Guardar
   </button>
-  <!-- botonoes -->
 
 
-  <button ion-button color="primary" block icon-left (click)="irRoot()">
-    root inicio
-  </button>
-  <button ion-button color="primary" block icon-left (click)="irAtras()">
-   atras
-  </button>
-
-  <button ion-button color="primary" block icon-left (click)="navCtrl.push('TablaparametrosPage')">
-    <ion-icon name="log-in"></ion-icon>
-    tablaparametros
-  </button>
-  <button ion-button color="primary" block icon-left (click)="navCtrl.push('ProblemassaludPage')">
-    <ion-icon name="log-in"></ion-icon>
-    problemas de salud
-  </button>
 </ion-content>
